Fix issue with gaps between rows, made wells transparent

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -14,3 +14,8 @@ body {
 .recipe-image {
   width: 100%;
 }
+
+.well {
+  min-height: 540px;
+  background-color: rgba(255, 255, 255, 0.3);
+}
